# space_retro

./: Cargo.toml
res/spaceship_test/: material.mtl
src/: main.rs
src/camera/: camera.rs
src/player/: player.rs
src/projectiles/: bullets.rs  mod.rs  projectile.rs
src/renderer/: renderer.rs
src/transform/: transform.rs
src/utils/: file_utils.rs  input_utils.rs  mesh_utils.rs  mod.rs
