[package]
name = "space_retro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bevy_ecs = "0.13.1"
bytemuck = { version = "1.15.0", features = [ "derive" ] }
macroquad = "0.4.5"
tobj = { version = "4.0.1", features = ["async"]}


[build-dependencies]
anyhow = "1.0.81"
fs_extra = "1.3.0"
glob = "0.3.1"
